// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .cache-15zqwx9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-15zqwx9-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .cache-1xuzoat-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #151a2d;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1xuzoat-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .cache-5fh518-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1oy1ilq-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 14px;
  color: inherit;
}

<div
    as="span"
    class="cache-5fh518-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1oy1ilq-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-15zqwx9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-15zqwx9-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-9sr9e8-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-6h4hwi-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 10px;
  color: inherit;
}

<div
    as="span"
    class="cache-9sr9e8-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-6h4hwi-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant danger 1`] = `
<DocumentFragment>
  .cache-xy008n-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #a6102d;
  background: #ffe1e7;
  border: 1px solid #ffe1e7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="danger"
    as="span"
    class="cache-xy008n-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-yxi61f-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #1a4dbf;
  background: #e1ebff;
  border: 1px solid #e1ebff;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="info"
    as="span"
    class="cache-yxi61f-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-15zqwx9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-15zqwx9-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-1mrlcwl-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #390171;
  background: #eeeeff;
  border: 1px solid #eeeeff;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1mrlcwl-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1k9rqpn-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #149a7b;
  background: #eafffb;
  border: 1px solid #eafffb;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="success"
    as="span"
    class="cache-1k9rqpn-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-jik51h-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #cc4e18;
  background: #ffefe6;
  border: 1px solid #ffefe6;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="warning"
    as="span"
    class="cache-jik51h-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-rq97i6-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: none;
}

.cache-1w5jm7j-StyledText-StyledText {
  color: #b2b6c3;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-rq97i6-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1w5jm7j-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-15zqwx9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-15zqwx9-StyledBox egvl2gp0"
    role="status"
  >
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with icon 1`] = `
<DocumentFragment>
  .cache-15zqwx9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b2b6c3;
  background: #f6f6f8;
  border: 1px solid #d4dae7;
}

.cache-nag7g3-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #4a4f62;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1vwepwg-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-15zqwx9-StyledBox egvl2gp0"
    role="status"
  >
    <svg
      class="cache-nag7g3-StyledIcon-sizeStyles etwatq50"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <p
      class="egvl2gp1 cache-1vwepwg-StyledText-StyledText e1tg3t120"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;
